--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<META NAME="AUTHOR" CONTENT="Authorized User">
 	<META NAME="CREATED" CONTENT="20131110;17130000">
 	<META NAME="CHANGEDBY" CONTENT="Robert Guthrie">
-	<META NAME="CHANGED" CONTENT="20150712;15375600">
+	<META NAME="CHANGED" CONTENT="20150712;15522600">
 	<META NAME="AppVersion" CONTENT="12.0000">
 	<META NAME="Company" CONTENT="">
 	<META NAME="DocSecurity" CONTENT="0">
@@ -24,10 +24,6 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0000ff" DIR="LTR">
-<DIV TYPE=HEADER>
-	<P ALIGN=CENTER STYLE="margin-bottom: 0.27in"><FONT SIZE=3><B>ROBERT
-	E. GUTHRIE</B></FONT></P>
-</DIV>
 <P STYLE="margin-bottom: 0in">PATENTS:</P>
 <P STYLE="margin-bottom: 0in">www.google.com/patents/US7912976</P>
 <P STYLE="margin-bottom: 0in">www.google.com/patents/US7792984</P>
@@ -36,8 +32,8 @@
 </P>
 <P STYLE="margin-bottom: 0in"><BR>
 </P>
-<P STYLE="margin-left: 2in; text-indent: 0.5in; margin-bottom: 0in; widows: 0; orphans: 0">
-<B>PROFICIENCIES</B></P>
+<P STYLE="margin-bottom: 0in; page-break-before: auto; page-break-after: auto">
+PROFICIENCIES:</P>
 <P ALIGN=CENTER STYLE="margin-bottom: 0in"><BR>
 </P>
 <TABLE WIDTH=670 BORDER=0 CELLPADDING=8 CELLSPACING=0>
