--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@ THE SOFTWARE.
 
 
     <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      Link with href
+      Databases
     </a>
-    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      Button with data-target
-    </button>
     <div class="collapse" id="collapseExample">
       <div class="well">
-        ...
+        DB2
+        Access
+        MySQL
       </div>
     </div>
   </body>
