--- a/index.html
+++ b/index.html
@@ -70,7 +70,34 @@ THE SOFTWARE.
         <p>DB2</p>
         <p>Access</p>
         <p>MySQL</p>
+        <p>Oracle</p>
       </div>
     </div>
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#design_patterns" aria-expanded="false" aria-controls="design_patterns">
+      Design Patterns...
+    </a>
+    <div class="collapse" id="design_patterns">
+      <div class="well">
+        <p>J2EE</p>
+        <p>Model / View / Controller</p>
+        <p>Parallel processing</p>
+        <p>Real time programming</p>
+      </div>
+    </div>
+
+
+
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
