--- a/index.html
+++ b/index.html
@@ -57,25 +57,26 @@ THE SOFTWARE.
 
       <div class="starter-template">
         <h1>Proficiencies</h1>
+        <p>Click on the buttons to expand</p>
       </div>
 
     </div><!-- /.container -->
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      Databases...
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#Databases" aria-expanded="false" aria-controls="Databases">
+      Databases
     </a>
-    <div class="collapse" id="collapseExample">
+    <div class="collapse" id="Databases">
       <div class="well">
         <p>DB2</p>
-        <p>Access</p>
+        <p>Microsoft Access</p>
         <p>MySQL</p>
         <p>Oracle</p>
       </div>
     </div>
 
     <a class="btn btn-primary" role="button" data-toggle="collapse" href="#design_patterns" aria-expanded="false" aria-controls="design_patterns">
-      Design Patterns...
+      Design Patterns
     </a>
     <div class="collapse" id="design_patterns">
       <div class="well">
@@ -83,8 +84,53 @@ THE SOFTWARE.
         <p>Model / View / Controller</p>
         <p>Parallel processing</p>
         <p>Real time programming</p>
+        <p>Service Oriented Architecture</p>
+        <p>Thread safe programming</p>
+        <p>Web services</p>
       </div>
     </div>
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#network_protocols" aria-expanded="false" aria-controls="network_protocols">
+      Network protocols and standards
+    </a>
+    <div class="collapse" id="network_protocols">
+      <div class="well">
+        <p>ARP/RARP</p>
+        <p>BOOTP</p>
+        <p>CIFS</p>
+        <p>Corba</p>
+        <p>CTDB</p>
+        <p>DNS</p>
+        <p>Ethernet</p>
+        <p>FDDI</p>
+        <p>IGMP</p>
+        <p>LDAP</p>
+        <p>Link Layer (OSI Level 2)</p>
+        <p>MAC group addressing</p>
+        <p>MIL-STD-1553</p>
+        <p>Network, diskless, Boot</p>
+        <p>NFS</p>
+        <p>RPC</p>
+        <p>RS-232</p>
+        <p>SAMBA</p>
+        <p>SOAP</p>
+        <p>SSH</p>
+        <p>STANAG 4156</p>
+        <p>TCP/IP</p>
+        <p>TFTP</p>
+        <p>UDP/IP</p>
+        <p>Wake On LAN</p>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
 
 
 
