--- a/index.html
+++ b/index.html
@@ -124,6 +124,93 @@ THE SOFTWARE.
     </div>
 
 
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#operating_sytems" aria-expanded="false" aria-controls="operating_sytems">
+      Operating Systems
+    </a>
+    <div class="collapse" id="operating_sytems">
+      <div class="well">
+        <p>iOS</p>
+        <p>Linux (RedHat Enterprise, SUSE Enterprise, Ubuntu)</p>
+        <p>Real Time Operating Systems</p>
+        <p>UNIX (AIX, HP, Solaris)</p>
+        <p>Windows (2008, 2012 servers)</p>
+      </div>
+    </div>
+
+
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#process" aria-expanded="false" aria-controls="process">
+      Process
+    </a>
+    <div class="collapse" id="process">
+      <div class="well">
+        <p>Agile</p>
+        <p>Code Reviews</p>
+        <p>Inspections</p>
+        <p>ISO 9000</p>
+        <p>IT Infrastructure Library (ITIL)</p>
+        <p>Software Engineering Institute</p>
+        <p>Sizing</p>
+        <p>Status Reporting</p>
+      </div>
+    </div>
+
+
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#programming_languages" aria-expanded="false" aria-controls="programming_languages">
+      Programming Languages
+    </a>
+    <div class="collapse" id="programming_languages">
+      <div class="well">
+        <p>ADA</p>
+        <p>Assembly</p>
+        <p>awk</p>
+        <p>C/C++</p>
+        <p>CMS/2</p>
+        <p>Java</p>
+        <p>Objective C</p>
+        <p>Pascal</p>
+        <p>Perl</p>
+        <p>PHP</p>
+        <p>Python</p>
+        <p>Redhat Package Manger (rpm)</p>
+        <p>sed</p>
+        <p>Shell script (Bourne, Bash)</p>
+        <p>VB script</p>
+      </div>
+    </div>
+
+
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#runtime_target_hardware" aria-expanded="false" aria-controls="runtime_target_hardware">
+      Runtime target hardware
+    </a>
+    <div class="collapse" id="runtime_target_hardware">
+      <div class="well">
+        <p>HP Itanium and PA-RISC servers</p>
+        <p>IBM System i,p,x,z servers</p>
+        <p>Intel/AMD based PCs and servers</p>
+        <p>Oracle SPARC, Intel/AMD servers</p>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
