--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ THE SOFTWARE.
 
       <div class="starter-template">
         <h1>Proficiencies</h1>
+        <p>Website built using bootstrap</p>
         <p>Click on the buttons to expand</p>
       </div>
 
@@ -196,30 +197,76 @@ THE SOFTWARE.
 
 
 
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#software_packages" aria-expanded="false" aria-controls="software_packages">
+      Software packages
+    </a>
+    <div class="collapse" id="software_packages">
+      <div class="well">
+        <p>GRUB</p>
+        <p>initrd</p>
+        <p>Install Shield</p>
+        <p>Install Anywhere</p>
+        <p>JSCH</p>
+      </div>
+    </div>
 
 
 
 
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#storage" aria-expanded="false" aria-controls="storage">
+      Storage
+    </a>
+    <div class="collapse" id="storage">
+      <div class="well">
+        <p>consistency groups</p>
+        <p>device mapper / multipath</p>
+        <p>disk controllers</p>
+        <p>Fiber Channel</p>
+        <p>metro mirroring</p>
+        <p>Network Attached Storage (NAS)</p>
+        <p>RAID</p>
+        <p>SCSI</p>
+        <p>Storage Array Network (SAN)</p>
+      </div>
+    </div>
 
 
 
 
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#tools" aria-expanded="false" aria-controls="tools">
+      Tools
+    </a>
+    <div class="collapse" id="tools">
+      <div class="well">
+        <p>cscope</p>
+        <p>Cygwin</p>
+        <p>Eclipse (J2EE, CDT, C/C++, SVN)</p>
+        <p>GNU (compiler, debugger, gmake)</p>
+        <p>IBM Configuration Management Version Control (CMVC)</p>
+        <p>Lotus Notes</p>
+        <p>Memory bug detectors</p>
+        <p>Memory Leak detectors</p>
+        <p>Microsoft Visual Studio</p>
+        <p>Microsoft WinDbg</p>
+        <p>Microsoft Word, Excel, PowerPoint, Outlook, Project</p>
+        <p>Network sniffers</p>
+        <p>Rational Products (Team Concert, Clear Quest, Clear Case, Software Architect, Application Developer)</p>
+        <p>Static code analysis</p>
+        <p>xcode</p>
+      </div>
+    </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#virtualization" aria-expanded="false" aria-controls="virtualization">
+      Virtualization
+    </a>
+    <div class="collapse" id="virtualization">
+      <div class="well">
+        <p>Oracle Virtual Box</p>
+        <p>VMware</p>
+      </div>
+    </div>
 
   </body>
 </html>
