--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@ THE SOFTWARE.
     </div><!-- /.container -->
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#Databases" aria-expanded="false" aria-controls="Databases">
+
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#Databases" aria-expanded="false" aria-controls="Databases">
       Databases
-    </a>
+    </a></h1>
     <div class="collapse" id="Databases">
       <div class="well">
         <p>DB2</p>
