--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ THE SOFTWARE.
       </div>
     </div>
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#design_patterns" aria-expanded="false" aria-controls="design_patterns">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#design_patterns" aria-expanded="false" aria-controls="design_patterns">
       Design Patterns
-    </a>
+    </a></h1>
     <div class="collapse" id="design_patterns">
       <div class="well">
         <p>J2EE</p>
@@ -92,9 +92,9 @@ THE SOFTWARE.
       </div>
     </div>
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#network_protocols" aria-expanded="false" aria-controls="network_protocols">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#network_protocols" aria-expanded="false" aria-controls="network_protocols">
       Network protocols and standards
-    </a>
+    </a></h1>
     <div class="collapse" id="network_protocols">
       <div class="well">
         <p>ARP/RARP</p>
@@ -126,9 +126,9 @@ THE SOFTWARE.
     </div>
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#operating_sytems" aria-expanded="false" aria-controls="operating_sytems">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#operating_sytems" aria-expanded="false" aria-controls="operating_sytems">
       Operating Systems
-    </a>
+    </a></h1>
     <div class="collapse" id="operating_sytems">
       <div class="well">
         <p>iOS</p>
@@ -141,9 +141,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#process" aria-expanded="false" aria-controls="process">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#process" aria-expanded="false" aria-controls="process">
       Process
-    </a>
+    </a></h1>
     <div class="collapse" id="process">
       <div class="well">
         <p>Agile</p>
@@ -159,9 +159,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#programming_languages" aria-expanded="false" aria-controls="programming_languages">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#programming_languages" aria-expanded="false" aria-controls="programming_languages">
       Programming Languages
-    </a>
+    </a></h1>
     <div class="collapse" id="programming_languages">
       <div class="well">
         <p>ADA</p>
@@ -184,9 +184,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#runtime_target_hardware" aria-expanded="false" aria-controls="runtime_target_hardware">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#runtime_target_hardware" aria-expanded="false" aria-controls="runtime_target_hardware">
       Runtime target hardware
-    </a>
+    </a></h1>
     <div class="collapse" id="runtime_target_hardware">
       <div class="well">
         <p>HP Itanium and PA-RISC servers</p>
@@ -198,9 +198,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#software_packages" aria-expanded="false" aria-controls="software_packages">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#software_packages" aria-expanded="false" aria-controls="software_packages">
       Software packages
-    </a>
+    </a></h1>
     <div class="collapse" id="software_packages">
       <div class="well">
         <p>GRUB</p>
@@ -214,9 +214,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#storage" aria-expanded="false" aria-controls="storage">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#storage" aria-expanded="false" aria-controls="storage">
       Storage
-    </a>
+    </a></h1>
     <div class="collapse" id="storage">
       <div class="well">
         <p>consistency groups</p>
@@ -234,9 +234,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#tools" aria-expanded="false" aria-controls="tools">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#tools" aria-expanded="false" aria-controls="tools">
       Tools
-    </a>
+    </a></h1>
     <div class="collapse" id="tools">
       <div class="well">
         <p>cscope</p>
@@ -259,9 +259,9 @@ THE SOFTWARE.
 
 
 
-    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#virtualization" aria-expanded="false" aria-controls="virtualization">
+    <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#virtualization" aria-expanded="false" aria-controls="virtualization">
       Virtualization
-    </a>
+    </a></h1>
     <div class="collapse" id="virtualization">
       <div class="well">
         <p>Oracle Virtual Box</p>
