--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ THE SOFTWARE.
     </div><!-- /.container -->
 
 
-
+    <div class="starter-template">
     <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#Databases" aria-expanded="false" aria-controls="Databases">
       Databases
     </a></h1>
@@ -75,6 +75,7 @@ THE SOFTWARE.
         <p>MySQL</p>
         <p>Oracle</p>
       </div>
+    </div>
     </div>
 
     <h1><a class="btn btn-primary" role="button" data-toggle="collapse" href="#design_patterns" aria-expanded="false" aria-controls="design_patterns">
