--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ THE SOFTWARE.
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Proficiencies</title>
 
 
     <!-- Latest compiled and minified CSS -->
